# otel_example

./: .env  .gitignore  README.md  api_gateway.py  apm-server.yml  dashboards.json  docker-compose.yml  document_service.py  filebeat.yml  load.js  main.py  migrations.sql  otel-collector-config.yaml  profile_service.py  prometheus.yml  pyproject.toml  requirements.txt
